// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Grid correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      className="rmq-2c87bfe9 rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d"
      data-radium={true}
      style={
        Object {
          "margin": "0 auto",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-2c87bfe9{width: 100% !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-816a7dd1{width: 832px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b3aaa63a{width: 1040px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-2e8763ff{width: 1248px !important;}}
@media (min-width: 1456px){ .rmq-7dcad03d{width: 1456px !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Grid with Row correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      className="rmq-2c87bfe9 rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d"
      data-radium={true}
      style={
        Object {
          "margin": "0 auto",
        }
      }
    >
      <div
        className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-bb094df8 rmq-93bd0d53"
        data-radium={true}
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-2c87bfe9{width: 100% !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-816a7dd1{width: 832px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b3aaa63a{width: 1040px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-2e8763ff{width: 1248px !important;}}
@media (min-width: 1456px){ .rmq-7dcad03d{width: 1456px !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-bb094df8{width: 1040px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-93bd0d53{width: 1040px !important;
margin: 0 auto !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Grid with Row with Columns correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      className="rmq-2c87bfe9 rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d"
      data-radium={true}
      style={
        Object {
          "margin": "0 auto",
        }
      }
    >
      <div
        className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-bb094df8 rmq-93bd0d53"
        data-radium={true}
        style={
          Object {
            "display": "block",
          }
        }
      >
        <div
          className="rmq-5cd7f856 rmq-3f38d303 rmq-a537bb32 rmq-e4ec3e25 rmq-357c0e23 rmq-b506d16c"
          data-radium={true}
          style={
            Object {
              "display": "inline-block",
            }
          }
        />
        <div
          className="rmq-5cd7f856 rmq-3f38d303 rmq-a537bb32 rmq-e4ec3e25 rmq-357c0e23 rmq-b506d16c"
          data-radium={true}
          style={
            Object {
              "display": "inline-block",
            }
          }
        />
        <div
          className="rmq-5cd7f856 rmq-3f38d303 rmq-a537bb32 rmq-e4ec3e25 rmq-357c0e23 rmq-b506d16c"
          data-radium={true}
          style={
            Object {
              "display": "inline-block",
            }
          }
        />
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-2c87bfe9{width: 100% !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-816a7dd1{width: 832px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b3aaa63a{width: 1040px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-2e8763ff{width: 1248px !important;}}
@media (min-width: 1456px){ .rmq-7dcad03d{width: 1456px !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-bb094df8{width: 1040px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-93bd0d53{width: 1040px !important;
margin: 0 auto !important;}}
@media (max-width: 767px){ .rmq-5cd7f856{display: block !important;
width: 100% !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-3f38d303{width: 208px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-a537bb32{width: 208px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-e4ec3e25{width: 208px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-357c0e23{width: 416px !important;}}
@media (min-width: 1456px){ .rmq-b506d16c{width: 520px !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Grid with styles correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      className="rmq-2c87bfe9 rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d"
      data-radium={true}
      style={
        Object {
          "color": "#ccc",
          "margin": "0 auto",
          "width": "100%",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-2c87bfe9{width: 100% !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-816a7dd1{width: 832px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b3aaa63a{width: 1040px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-2e8763ff{width: 1248px !important;}}
@media (min-width: 1456px){ .rmq-7dcad03d{width: 1456px !important;}}",
      }
    }
  />
</div>
`;
